# KokoroMeter

./: .gitignore  AGENTS.md  README.md  pixi.toml  pyproject.toml
.agents/skills/hosyond-4in-esp32-screen/: SKILL.md
cli/: daemon.py  main.py
cli/tests/: test_cli.py
docs/: DEVELOPING.md
firmware/: platformio.ini
firmware/src/: cloudcode_client.cpp  cloudcode_client.h  main.cpp  oauth_client.cpp  oauth_client.h  quota_parser.cpp  quota_parser.h  ssd1306_ui.cpp  ssd1306_ui.h  token_storage.cpp  token_storage.h  wifi_manager.cpp  wifi_manager.h
firmware/test/test_desktop/: test_main.cpp
