[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kokoro"
version = "0.1.0"
description = "CLI and daemon for KokoroMeter hardware dashboard"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyserial>=3.5"
]

[project.scripts]
kokoro = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
